--- a/app/views/employee-message-list.html
+++ b/app/views/employee-message-list.html
@@ -10,7 +10,7 @@
         </div>
 
         <div class="col-xs-6 text-right">
-          <button class="btn btn-primary" ng-click="goToDetailPage('create', '')">
+          <button class="btn btn-primary" ng-show="isCRUD" ng-click="goToDetailPage('create', '')">
             <span class="fa fa-plus" aria-hidden="true"></span>
             <span class="hidden-sm hidden-xs">Create Message</span>
           </button>
@@ -131,9 +131,9 @@
         <td>
           <button class="btn btn-info btn-xs" ng-click="goToDetailPage('view', message.id)"><i class="fa fa-file"></i>
           </button>
-          <button class="btn btn-primary btn-xs" ng-show="isActiveOrFutureRecord(message)"
+          <button class="btn btn-primary btn-xs" ng-show="isCRUD && isActiveOrFutureRecord(message)"
                   ng-click="goToDetailPage('edit', message.id)"><i class="fa fa-pencil"></i></button>
-          <button class="btn btn-danger btn-xs" ng-show="isFutureRecord(message)"
+          <button class="btn btn-danger btn-xs" ng-show="isCRUD && isFutureRecord(message)"
                   ng-click="deleteRecordDialog(message, ['employeeMessageText', 'startDate', 'endDate'])"><i class="fa fa-trash"></i></button>
         </td>
       </tr>
