--- a/app/views/excise-duty-relationship-list.html
+++ b/app/views/excise-duty-relationship-list.html
@@ -10,7 +10,7 @@
           <span class="fa fa-search" aria-hidden="true"></span>
           <span class="hidden-sm hidden-xs">Search</span>
         </button>
-        <button class="btn btn-primary" aria-expanded="false" ng-click="toggleCreatePanel()">
+        <button class="btn btn-primary" ng-show="isCRUD" aria-expanded="false" ng-click="toggleCreatePanel()">
           <span class="fa fa-plus" aria-hidden="true"></span>
           <span class="hidden-sm hidden-xs">Create New Relationship</span>
         </button>
@@ -208,7 +208,7 @@
           <th>Alcohol Volume</th>
           <th class="col-xs-2">Start Date</th>
           <th class="col-xs-2">End Date</th>
-          <th>Actions</th>
+          <th ng-show="isCRUD">Actions</th>
         </tr>
         </thead>
         <tbody>
@@ -293,7 +293,7 @@
               ng-show="isSelectedToEdit(relationship)">
             </date-picker-field>
           </td>
-          <td>
+          <td ng-show="isCRUD">
             <button type="submit"
                     class="btn btn-success btn-xs"
                     tabindex="0"
