--- a/app/views/menu-edit.html
+++ b/app/views/menu-edit.html
@@ -17,7 +17,7 @@
 </div>
 
 
-<div class="container">
+<div class="module-container">
 
   <error-dialog form-object="menuEditForm" error-response="errorResponse" display="displayError"></error-dialog>
 
@@ -217,3 +217,4 @@
     </div>
   </form>
 </div>
+<dynamic-left-nav title="Menu Management"></dynamic-left-nav>
