--- a/app/views/menu-relationship-list.html
+++ b/app/views/menu-relationship-list.html
@@ -12,7 +12,7 @@
 
       <div class="col-xs-6 text-right">
 
-				<a href="#/menu-relationship-create" class="btn btn-primary btn-create">
+				<a href="#/menu-relationship-create" ng-show="isCRUD" class="btn btn-primary btn-create">
 					<span class="fa fa-plus" aria-hidden="true"></span> <span class="btn-label hidden-xs">Create Menu Relationship</span>
 				</a>
 
@@ -131,11 +131,11 @@
             <i class="fa fa-file"></i>
           </a>
 
-          <a class="btn btn-primary btn-xs btn-edit" ng-href="#/menu-relationship-edit/{{relationship.id}}" ng-hide="isRelationshipInactive(relationship.endDate)">
+          <a class="btn btn-primary btn-xs btn-edit" ng-href="#/menu-relationship-edit/{{relationship.id}}" ng-hide="!isCRUD || isRelationshipInactive(relationship.endDate)">
             <i class="fa fa-pencil"></i>
           </a>
 
-          <button class="btn btn-danger btn-xs btn-delete" ng-click="deleteRecordDialog(relationship)"  ng-hide="isRelationshipActive(relationship.startDate) || isRelationshipInactive(relationship.endDate)">
+          <button class="btn btn-danger btn-xs btn-delete" ng-click="deleteRecordDialog(relationship)"  ng-hide="!isCRUD || isRelationshipActive(relationship.startDate) || isRelationshipInactive(relationship.endDate)">
             <i class="fa fa-trash"></i>
           </button>
 
