--- a/app/views/menu-list.html
+++ b/app/views/menu-list.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="module-container">
 
   <div class="list-controls">
     <div class="row item-list-row">
@@ -14,12 +14,12 @@
           <span class="hidden-sm hidden-xs">Filter</span>
         </button>
 
-        <a href="#/menu/create" class="btn btn-primary">
+        <a href="#/menu/create" ng-show="isCRUD" class="btn btn-primary">
           <i class="fa fa-plus" aria-hidden="true"></i>
           <span class="hidden-xs">Create Menu</span>
         </a>
 
-        <excel-upload type="menu"></excel-upload>
+        <excel-upload ng-show="isCRUD" type="menu"></excel-upload>
       </div>
     </div>
 
@@ -89,10 +89,10 @@
         <button class="btn btn-info btn-xs" ng-click="showMenu(menu)">
           <i class="fa fa-file"></i>
         </button>
-        <button class="btn btn-primary btn-xs" ng-click="editMenu(menu)" ng-show="isMenuEditable(menu)">
+        <button class="btn btn-primary btn-xs" ng-click="editMenu(menu)" ng-show="isCRUD && isMenuEditable(menu)">
           <i class="fa fa-pencil"></i>
         </button>
-        <button class="btn btn-danger btn-xs" ng-click="showDeleteConfirmation(menu)" ng-hide="isMenuReadOnly(menu)">
+        <button class="btn btn-danger btn-xs" ng-click="showDeleteConfirmation(menu)" ng-hide="!isCRUD || isMenuReadOnly(menu)">
           <i class="fa fa-trash"></i>
         </button>
       </td>
@@ -131,3 +131,4 @@
     </div>
   </div>
 </div>
+<dynamic-left-nav></dynamic-left-nav>
