--- a/app/views/menu-rules.html
+++ b/app/views/menu-rules.html
@@ -10,7 +10,7 @@
     <h1>{{viewName}}</h1>
 	  <div class="row">
         <div class="col-xs-12 text-left">
-        	<a href="#/menu-rules/create" class="btn btn-primary">+ <span class="hidden-xs">Create New</span></a>
+        	<a href="#/menu-rules/create" ng-show="isCRUD" class="btn btn-primary">+ <span class="hidden-xs">Create New</span></a>
        
        <button class="btn btn-default pull-right" data-toggle="collapse" data-target="#search-collapse"
                 aria-expanded="false"
@@ -157,10 +157,10 @@
             <button class="btn btn-primary btn-xs" ng-click="redirectToMenuRules(menuRule.id, 'view')">
               <i class="fa fa-file"></i>
             </button>
-            <button class="btn btn-primary btn-xs" ng-click="redirectToMenuRules(menuRule.id, 'edit')"  ng-show="isCurrentEffectiveDate(menuRule) || isFutureEffectiveDate(menuRule)">
+            <button class="btn btn-primary btn-xs" ng-click="redirectToMenuRules(menuRule.id, 'edit')"  ng-show="isCRUD && (isCurrentEffectiveDate(menuRule) || isFutureEffectiveDate(menuRule))">
               <i class="fa fa-pencil"></i>
             </button>
-            <button class="btn btn-primary btn-xs" ng-click="showDeleteConfirmation(menuRule.id)" ng-show="isFutureEffectiveDate(menuRule)">
+            <button class="btn btn-primary btn-xs" ng-click="showDeleteConfirmation(menuRule.id)" ng-show="isCRUD && isFutureEffectiveDate(menuRule)">
               <i class="fa fa-trash"></i>
             </button>
           </td>
