--- a/app/views/promotion-catalog.html
+++ b/app/views/promotion-catalog.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="module-container">
 
   <error-dialog form-object="promotionCatalogForm" error-response="errorResponse" display="displayError"></error-dialog>
 
@@ -115,3 +115,4 @@
 
   </form>
 </div>
+<dynamic-left-nav title="Promotion Management"></dynamic-left-nav>
