--- a/app/views/promotion-category.html
+++ b/app/views/promotion-category.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="module-container">
 
   <error-dialog form-object="promotionCategoryForm" error-response="errorResponse" display="displayError"></error-dialog>
 
@@ -135,3 +135,4 @@
 
   </form>
 </div>
+<dynamic-left-nav title="Promotion Management"></dynamic-left-nav>
