--- a/app/views/receipt-rules-create.html
+++ b/app/views/receipt-rules-create.html
@@ -11,6 +11,10 @@
       <div class="col-xs-6">
         <h2 class="view-name">{{viewName}}</h2>
       </div>
+      
+      <div class="col-xs-6 text-right">
+	  	<a class="btn btn-default" ng-href="#/receipt-rules" class="btn" ng-show="readOnly">Back</a>
+	  </div>
     </div>
 
   </div>
@@ -108,4 +112,4 @@
 
 <leave-view-modal></leave-view-modal>
 
-<!-- <dynamic-left-nav title="ReceiptRule Management"></dynamic-left-nav> -->
+<dynamic-left-nav title="Receipt Rule"></dynamic-left-nav>
