TSVPORTAL-10860 | Updated Company Relationship screen.

--- a/app/views/company-relationship.html
+++ b/app/views/company-relationship.html
@@ -1,3 +1,4 @@
+<div class="module-container">
 <h2 class="view-name">{{viewName}}</h2>
 <div class="list-controls">
   <div class="row">
@@ -88,3 +89,5 @@
     </div>
   </div>
 </div>
+</div>
+<dynamic-left-nav title="Company Management"></dynamic-left-nav>
