TSVPORTAL-10860 | Updated with few minor fixes.

--- a/app/views/promotion-catalog-conjunction.html
+++ b/app/views/promotion-catalog-conjunction.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="module-container">
 
   <error-dialog form-object="promotionCatalogConjunctionForm" error-response="errorResponse" display="displayError"></error-dialog>
 
@@ -110,4 +110,6 @@
 </div>
 
 <delete-record-dialog></delete-record-dialog>
+
+<dynamic-left-nav title="Promotion Management"></dynamic-left-nav>
 
