--- a/app/views/menu-rule-create.html
+++ b/app/views/menu-rule-create.html
@@ -348,4 +348,4 @@
 <form-success-modal></form-success-modal>
 <form-update-modal></form-update-modal>
 <leave-view-modal></leave-view-modal>
-<dynamic-left-nav></dynamic-left-nav>
+<dynamic-left-nav title="Menu Assignment"></dynamic-left-nav>
