TSVPORTAL-231: TSVPORTAL-10902: updating modlues on prodcut version change

--- a/app/views/epos-config.html
+++ b/app/views/epos-config.html
@@ -32,6 +32,7 @@
             name="productVersion"
             class="form-control"
             id="productVersion"
+            ng-change="selectProductVersion()"
             ng-model="selectedProductVersion"
             ng-options="productVersion as productVersion.displayName for productVersion in productVersions">
             <option selected default value="">Select Product Version</option>
