--- a/app/views/epos-config.html
+++ b/app/views/epos-config.html
@@ -6,7 +6,8 @@
       <h3 class="modal-title">{{ selectedModule.moduleName || 'EPOS Configuration' }}</h3>
     </div>
     <div class="modal-body">
-      <p ng-hide="moduleConfiguration">Select Product Version first, then choose module you want to edit.</p>
+      <p ng-show="selectedProductVersion === null || selectedProductVersion === 'undefined'">Select Product Version first, then choose module you want to edit.</p>
+      <p ng-show="selectedProductVersion && (moduleConfiguration === null || moduleConfiguration === 'undefined')">Please choose module you want to edit</p>
 
       <div ng-show="moduleConfiguration" class="">
 
