--- a/app/views/epos-config.html
+++ b/app/views/epos-config.html
@@ -26,7 +26,7 @@
 <div id="left-navigation-epos-configuration">
   <div class="container">
 
-    <ul class="navbar">
+    <ul class="navbar product-version-scrollable">
       <li class="product-version" tabindex="0" style="">
         <div class="">
           <select
