--- a/app/views/tax-rates.html
+++ b/app/views/tax-rates.html
@@ -136,6 +136,8 @@
           <th>Rate *</th>
           <th>Effective From *</th>
           <th>Effective To *</th>
+          <th>Updated Date/Time</th>
+          <th>Updated User</th>
           <th ng-show="isCRUD">Actions</th>
         </tr>
       </thead>
@@ -272,21 +274,23 @@
         <!-- Switch for endDate -->
         <td class="animate-switch col-xs-1" style="position:relative !important" ng-switch-when="read">{{ taxRate.endDate }}</td>
         <td class="animate-switch tax-rates-dates col-xs-1" style="position:relative !important" ng-switch-when="edit" >
-          <date-picker-field 
+          <date-picker-field
            min-date="minDate"
            custom-effective="true"
            custom-date="taxRate.endDate"
-           disable="isDisabledEndDateForm(taxRate)" 
-           ng-model="taxRate.endDate" 
+           disable="isDisabledEndDateForm(taxRate)"
+           ng-model="taxRate.endDate"
            orientation="determineDatePickerOrientation(taxRate)" ></date-picker-field>
         </td>
         <td class="animate-switch tax-rates-dates col-xs-1" style="position:relative !important" ng-switch-when="create">
-          <date-picker-field 
+          <date-picker-field
            min-date="minDate"
            custom-effective="true"
            custom-date="taxRate.endDate"
            ng-model="taxRate.endDate"></date-picker-field>
         </td>
+        <td>{{ getUpdatedOn(taxRate) }}</td>
+        <td>{{ getUpdateBy(taxRate) }}</td>
         <!-- Buttons for Read -->
         <td class="animate-switch col-xs-1" ng-switch-when="read" ng-show="isCRUD">
           <a class="btn btn-primary btn-xs" ng-show="isTaxRateEditable(taxRate)" ng-click="editCompanyTaxRate(taxRate)">
