TSVPORTAL-231: TSVPORTAL-10903: non epos admin config users can make changes

--- a/app/views/epos-config.html
+++ b/app/views/epos-config.html
@@ -16,8 +16,8 @@
       </div>
     </div>
     <div class="modal-footer" ng-show="selectedProductVersion && selectedModule">
-      <button class="btn btn-primary" type="submit" ng-disabled="isModuleConfigurationOptionsEmpty()" ng-hide="isModuleConfigurationOptionsEmpty()">Save</button>
-      <button class="btn btn-danger" type="button" ng-disabled="isModuleConfigurationOptionsEmpty()" ng-hide="isModuleConfigurationOptionsEmpty()" ng-click="cancel()">Cancel</button>
+      <button class="btn btn-primary" type="submit" ng-disabled="isModuleConfigurationOptionsEmpty()" ng-hide="!isUserAvailableForEditAndCreate() || isModuleConfigurationOptionsEmpty()">Save</button>
+      <button class="btn btn-danger" type="button" ng-disabled="isModuleConfigurationOptionsEmpty()" ng-hide="!isUserAvailableForEditAndCreate() || isModuleConfigurationOptionsEmpty()" ng-click="cancel()">Cancel</button>
     </div>
   </form>
 </div>
