--- a/app/views/directives/epos-config-form-modules.html
+++ b/app/views/directives/epos-config-form-modules.html
@@ -1,5 +1,5 @@
 <div>
   <ul style='list-style: none'>
-    <module ng-repeat='module in moduleList' single-module='module' model="model"></module>
+    <module ng-repeat='module in moduleList' single-module='module' model="model" are-inputs-disabled="areInputsDisabled"></module>
   </ul>
 </div>
